# local-nix-cache

./: .envrc  Cargo.nix  Cargo.toml  README.md  crates-io.list  crates-io.nix  default.nix  module.nix  test.nix
.github/workflows/: test.yml
nix/: Cargo.nix  crate-overrides.nix  default.nix  sources.json
src/: avahi.rs  main.rs  narinfo.rs  state.rs  util.rs  web.rs
src/binary_cache/: mod.rs  schema.sqlite3
src/store/: mod.rs  schema.sqlite3
